--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
     <head>
         <title>WebGL project</title>
     </head>
-    <body>
+    <body onload="InitProject();">
         <canvas id="main-canvas" width="800" height="600">
             Oops, your Browser does not support HTML5
         </canvas>
         <br/><i>Project is above this text</i>
+        <script src="app.js"></script>
     </body>
 </html>
