--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             Oops, your Browser does not support HTML5
         </canvas>
         <br/><i>Project is above this text</i>
+        <script src="gl-matrix.js"></script>
         <script src="app.js"></script>
     </body>
 </html>
