--- a/index.html
+++ b/index.html
@@ -9,5 +9,24 @@
         <br/>
         <script src="gl-matrix.js"></script>
         <script src="app.js"></script>
+        <p>Instruções para usar o programa:</br>
+            Atalhos de movimentação (translação):</br>
+            W : movimenta o objeto para cima</br>
+            A : movimenta o objeto para a esquerda</br>
+            S : movimenta o objeto para baixo</br>
+            D : movimenta o objeto para a direita</br></br>
+            E/+ : aproxima o objeto da tela</br>
+            Q/- : afasta o objeto da tela</br></br>
+            Atalhos do numpad (rotação):</br>
+            1 : rotaciona o objeto para baixo e para a esquerda</br>
+            2 : rotaciona o objeto para baixo, apenas no eixo Z</br>
+            3 : rotaciona o objeto para baixo e para a direita</br>
+            4 : rotaciona o objeto para a esquerda, apenas no eixo Y</br>
+            6 : rotaciona o objeto para a direita, apenas no eixo Y</br>
+            7 : rotaciona o objeto para cima e para a esquerda</br>
+            8 : rotaciona o objeto para cima, apenas no eixo Z</br>
+            9 : rotaciona o objeto para cima e para a direita</br></br>
+            Enter : troca o objeto sendo manipulado.</br>
+            Opções disponíveis: Cubo, Pirâmide, Icosaedro</p>
     </body>
 </html>
