texto indicador das instruções inserido

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>WebGL project</title>
     </head>
     <body onload="InitProject();">
+        <p>Instruções para usar o programa abaixo!</p>
         <canvas id="main-canvas" width="1280" height="720">
             Oops, your Browser does not support HTML5
         </canvas>
