fix: consertando texto HTML

--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
         <script src="app.js"></script>
         <p>Instruções para usar o programa:</br>
             Atalhos de movimentação (translação):</br>
-            W : movimenta o objeto para cima</br>
-            A : movimenta o objeto para a esquerda</br>
-            S : movimenta o objeto para baixo</br>
-            D : movimenta o objeto para a direita</br></br>
-            E/+ : aproxima o objeto da tela</br>
-            Q/- : afasta o objeto da tela</br></br>
+            W : movimenta o objeto positivamente no eixo Y</br>
+            A : movimenta o objeto negativamente no eixo X</br>
+            S : movimenta o objeto negativamente no eixo Y</br>
+            D : movimenta o objeto positivamente no eixo X</br>
+            E : movimenta o objeto positivamente no eixo Z</br>
+            Q : movimenta o objeto negativamente no eixo Z</br></br>
+            Atalhos de escala:</br>
+            + : Aumenta a escala do objeto em todas as direções</br>
+            - : Diminui a escala do objeto em todas as direções</br></br>
             Atalhos do numpad (rotação):</br>
             1 : rotaciona o objeto para baixo e para a esquerda</br>
             2 : rotaciona o objeto para baixo, apenas no eixo X</br>
